--- a/agi-project/pyproject.toml
+++ b/agi-project/pyproject.toml
@@ -13,6 +13,12 @@ numpy = "*"
 pyarrow = "*" # For Apache Arrow integration
 # Rust FFI libraries will be added here as they are developed
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.1"
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
