--- a/agi-project/pyproject.toml
+++ b/agi-project/pyproject.toml
@@ -11,6 +11,8 @@ flax = "*"
 optax = "*"
 numpy = "*"
 pyarrow = "*" # For Apache Arrow integration
+requests = "*"
+googlesearch-python = "*"
 # Rust FFI libraries will be added here as they are developed
 
 [tool.poetry.group.dev.dependencies]
