feat: Integrate Prometheus Engine and update documentation
This commit marks a major milestone in Project Chimera by replacing the MockCognitiveCore with the PrometheusCognitiveCore. This new engine connects the agent to real language models, enabling generative intelligence.

--- a/agi-project/pyproject.toml
+++ b/agi-project/pyproject.toml
@@ -11,6 +11,7 @@ flax = "*"
 optax = "*"
 numpy = "*"
 pyarrow = "*" # For Apache Arrow integration
+httpx = "*" # For making HTTP requests
 # Rust FFI libraries will be added here as they are developed
 
 [tool.poetry.group.dev.dependencies]
